--- a/RECICLAPP/settings.gradle
+++ b/RECICLAPP/settings.gradle
@@ -16,3 +16,4 @@ dependencyResolutionManagement {
 
 rootProject.name = "RECICLAPP"
 include ':app'
+project(':app').projectDir = new File(rootDir, 'app')
